# phodav

./: .editorconfig  .gitlab-ci.yml  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  avahi-common.c  avahi-common.h  chezdav.wxs.in  configure.ac  libphodav-1.0.pc.in  libphodav-2.0.pc.in  make-msi.sh.in  meson.build  meson_options.txt  phodav.doap  spice-webdavd.wxs.in
data/: 70-spice-webdavd.rules  chezdav.wxs.in  make-msi.sh.in  meson.build  spice-webdavd.service  spice-webdavd.target  spice-webdavd.wxs.in
doc/: Makefile.am  chezdav.txt  meson.build
doc/reference/: Makefile.am  gtkdocentities.ent.in  meson.build  phodav-2.0-docs.sgml  phodav-2.0-sections.txt  phodav-docs.sgml.in  phodav-sections.txt
libphodav/: chezdav.c  guuid.c  guuid.h  libphodav.syms  meson.build  phodav-if.c  phodav-lock.c  phodav-lock.h  phodav-method-delete.c  phodav-method-get.c  phodav-method-get.h  phodav-method-lock.c  phodav-method-mkcol.c  phodav-method-movecopy.c  phodav-method-propfind.c  phodav-method-propfind.h  phodav-method-proppatch.c  phodav-method-put.c  phodav-method-unlock.c  phodav-multistatus.c  phodav-multistatus.h  phodav-path.c  phodav-path.h  phodav-priv.h  phodav-server.c  phodav-server.h  phodav-utils.c  phodav-utils.h  phodav-virtual-dir.c  phodav-virtual-dir.h  phodav.h
m4/: manywarnings.m4
po/: LINGUAS  Makevars  POTFILES.in  bs.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fi.po  fur.po  hi.po  hr.po  hu.po  id.po  ka.po  meson.build  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tr.po  uk.po  zh_CN.po
spice/: Makefile.am  map-drive.bat  meson.build  output-queue.c  spice-webdavd.c
tests/: meson.build  virtual-dir-server.c  virtual-dir.c
