option('gtk_doc',
       type : 'feature',
       description : 'Generate API documentation with gtk-doc')

option('avahi',
       type : 'feature',
       description : 'Build with avahi/mdns')

option('systemdsystemunitdir',
       type: 'string',
       description: 'Directory for systemd system unit files')

option('udevrulesdir',
       type : 'string',
       description : 'Directory for udev rules')

option('build-id',
       type : 'integer',
       value : 0,
       description : 'Build ID')
